<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hardwareAccelerated="false"
    android:largeHeap="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:fontFamily="casual"
                android:text="@string/call"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_call"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/when_you_want_to_call_with_saller_just_press_this_button_to_call_him"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/remove"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_name"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/to_remove_your_item_you_have_added_it"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/sign_out"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_logout"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/to_sign_out_from_you_account"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/change_map_type"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_map_type"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginTop="40sp"
                android:textStyle="bold"
                android:text="@string/to_change_map_type_from_hybrid_to_satallite_for_best_view_and_more_information_about_place_s_is_around_item"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/request"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_request"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/to_request_saller_to_inform_you_want_this_item_and_you_want_to_choose_the_best_date_to_see_it"
                android:textAlignment="center"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/profile"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_profile"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/to_view_the_seller_profile_you_click_on_this_button_and_it_will_show_the_seller_details"
                android:textAlignment="center"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/filter"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/ic_action_filter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:text="@string/to_view_the_filter_you_click_on_the_button_showing_above_on_the_map_activity"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:fontFamily="casual"
                android:text="@string/the_end"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />


        </LinearLayout>
    </ScrollView>

</LinearLayout>