<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hardwareAccelerated="false"
    android:largeHeap="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay"
        android:paddingBottom="10sp"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:fontFamily="casual"
                android:text="@string/_1"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/marker_me"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/click_on_the_item_you_want_to_delete_it"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:fontFamily="casual"
                android:text="@string/_2"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/delete_1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/click_on_delete_button"
                android:textAlignment="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:fontFamily="casual"
                android:text="@string/_3"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginTop="40sp"
                android:background="@color/colorAccent"
                android:src="@drawable/delete_2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/click_yes_if_you_are_sure_to_delete_it"
                android:textAlignment="center"
                android:layout_marginBottom="20sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/black"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>