<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.gp2.omar.aqarcom.LoginPage">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:fontFamily="casual"
                android:text="@string/welcome_Login_page"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:background="@mipmap/ic_launcher_icon"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:fontFamily="casual"
                android:text="@string/EnterAll"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textStyle="bold|italic"

                />

            <EditText
                android:id="@+id/LoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Email"
                android:inputType="textCapWords|textCapSentences|textAutoCorrect|textEmailAddress"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textStyle="bold|italic"
                />

            <EditText
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Passwrod"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="19sp"
                android:textStyle="bold|italic"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="casual"
                android:onClick="ResetPass"
                android:text="@string/reset_password_foreget_your_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic"

                />
            <ProgressBar
                android:id="@+id/progressbasLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_shape"
                android:fontFamily="casual"
                android:onClick="LoginCheck"
                android:text="@string/Next"
                android:textStyle="bold"/>


        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
